--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body    /*body full screen*/
 .back::after 
 {
   content:"";
-  background-image:url('background.PNG');
+  background-image:url('background.png');
   height: 100%;
   background-position: center;
   background-repeat: repeat;
@@ -37,7 +37,7 @@ body    /*body full screen*/
 .topPicture /*menu background*/
 {
 	position: relative;
-  background-image: url("purple.PNG"); 
+  background-image: url("purple.png"); 
   background-repeat: no-repeat; 
   background-size: 100% 80px;
   width: 100%;
