Revert "Update style.css"
This reverts commit 3105cc3a6f390432e228e35fc16baa051437640f.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body    /*body full screen*/
 .topPicture /*menu background*/
 {
 	position: relative;
-  background-image: url("purple.PNG"); 
+  background-image: url("purple.png"); 
   background-repeat: no-repeat; 
   background-size: 100% 80px;
   width: 100%;
