--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body    /*body full screen*/
 .back::after 
 {
   content:"";
-  background-image:url('background.PNG');
+  background-image:url('background.png');
   height: 100%;
   background-position: center;
   background-repeat: repeat;
