--- a/style.css
+++ b/style.css
@@ -1,216 +1,223 @@
-body    /*body full screen*/
-{
-	margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
+/*
+    My presentation, resume and projects
+    Simon Paquette - Portfolio
+    Author: Simon Paquette
+    Latest update: 2021/08
+*/
+
+
+/*
+** ----------------------------------------------
+**                  DOCUMENT
+** ----------------------------------------------
+*/
+
+/* Remove automatic margin */
+body {
+    margin: 0;
 }
 
-/*background full screen for presentation*/
-/*TODO*/
-.back::after 
-{
-  content:"";
-  background-image:url('background.png');
-  height: 100%;
-  background-position: center;
-  background-repeat: repeat;
-  background-size: cover; 
-  opacity: 0.20;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1; 
-
+/* Set personal margin */
+#presentation, #resume, #projects {
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
-/*title and decoration for the menu*/
-.top /*general div*/
-{
-	position: fixed;
-	width: 100%;
-  top:0px;
-}
-.topPicture /*menu background*/
-{
-	position: relative;
-  background-image: url("purple.PNG"); 
-  background-repeat: no-repeat; 
-  background-size: 100% 80px;
-  width: 100%;
-  height: 80px;        
-}
-.title
-{
-	position : absolute;
-	top : 15px;
-	left: 100px;
+
+/*
+** ----------------------------------------------
+**                  HEADER
+** ----------------------------------------------
+*/
+
+/* Set navigation header style */
+#navHeader {
+    padding: 20px 50px 20px;
+    background-image: url("nav.PNG");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 	color:white;
-	font-size: 40px;
-}
-.language
-{
-	margin-top : 25px;
-	margin-right: 50px;
-	font-size: 20px;
-}
-.language a
-{
-	color:white;
+	font-size: 30px;  
 }
 
-/*navigation bar*/
-.menu
-{
-	position: relative;
-	background: black;
-  padding-left: 20px;	
-  padding-right: 10px;
+/* Set button to toggle language between "en" and "fr" */
+#toggleLang {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 15px;
+    line-height: 30px;   
 }
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-.menu li {
-  float: left;
-  font-size: 20px;
-}
-.menu li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding-right: 25px;
-  padding-left: 5px;
-  text-decoration: none;
-  border-left-style: solid;
-  border-left-color: purple;
-}
-.menu li a:hover {
-  background-color: purple;
+#toggleLang:hover {
+    font-size: 20px;
 }
 
-/*div for presentation page*/
-.presentation
-{
-  margin-top: 130px;
+/* Set menu style for navigation between pages  */
+#menu {
+    padding-left: 50px;
+    padding-right: 50px;
+    background: black;
 }
-.myPicture /*profile picture*/
-{
-  width:15%;
-  float: left;
-  padding:80px 0px 0px 70px;
+#menu ul {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style-type: none;
+    font-size: 20px;
 }
-.myPicture img
-{
-  max-height: 80%;
-  max-width:80%;
+#menu li:hover {
+    background-color: purple;
 }
-.text
-{
-  padding-top: 20px;
-  padding-left:20px;
-  width:65%;
-  height: 400px;
-  float: left; 
-  color:#200000;
-  font-size: 18px;
-  text-align: justify;
+#menu li a {
+    color: white;
+    text-decoration: none;
 }
 
-/*div for the resume*/
-.info
-{
-  margin-top: 120px;
-  margin-left: 35px;
-  margin-right: 35px;
-}
-.info h1
-{
-  text-transform: uppercase;
-  color: purple;
-  margin-top: 30px;
-  margin-bottom: 0px;
-  font-size: 22px;
-}
-.info h2
-{
-  font-size: 20px;
-  margin-top: 20px;
-  margin-bottom: 0px;
-}
-.info p
-{
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-.info ul
-{
-  margin-top: 5px;
-  margin-bottom: 5px;
+/* Set float left style */
+.left {
+    float: left;
+    padding-left: 5px;
+    padding-right: 25px;
+    border-left-style: solid;
+    border-left-color: purple;
 }
 
-/*div for all projects*/
-.projects
-{
-  margin-top: 120px;
-  margin-left: auto;
-  margin-right: auto;
-  width:75%;
-}
-.projects h1
-{
-  color: purple;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 25px;
-  margin-right: 25px;
-  font-size: 24px;
-}
-.projects p
-{
-  margin-top: 10px;
-  margin-left: 25px;
-}
-/*div for each project*/
-.project 
-{
-  margin-top:40px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 2px solid purple;
-  border-top: 2px solid purple;
-  border-radius: 36px;
-  background-color: #e4e4e4;
-}
-.project p
-{
-  text-align: justify;
-}
-.intro /*mini resume of the project*/
-{
-  width: 50%;
-  float:left; 
-}
-.projectPicture /*capture from the project*/
-{
-  width: 40%;
-  float:left;
-  padding-left: 30px;
+/* Set float right style */
+.right {
+    float: right;
+    padding-left: 25px;
+    padding-right: 5px;
+    border-right-style: solid;
+    border-right-color: purple;
 }
 
-.projectPicture img
-{
-  max-height:250px;
-  max-width:100%;
+/* Remove possibility to click to navigate to this page */
+.disable {
+    background-color:#320032;
+    pointer-events: none;
 }
-.project:after {
-  content: "";
-  display: table;
-  clear: both;
+
+
+/*
+** ----------------------------------------------
+**              PRESENTATION PAGE
+** ----------------------------------------------
+*/
+
+/* Set background image */
+#presentation:before {
+    content:"";
+    background-image:url('background.png');
+    background-size: cover; 
+    opacity: 0.15;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1; 
+}
+
+/* Set profile picture */
+#myPicture {
+    float: left;
+    width: 20%;
+    padding-top: 20px;
+    padding-left: 50px;
+}
+#myPicture img {
+    width: 70%;
+    height: 70%;
+    padding: 2px;
+    border: 2px solid #320032;
+}
+
+/* Set personal description */
+.text {
+    float: left;
+    width: 65%;
+    padding-left: 20px;
+    color: black;
+    font-size: 18px;
+    text-align: justify;
+}
+
+
+/*
+** ----------------------------------------------
+**              RESUME PAGE
+** ----------------------------------------------
+*/
+
+/* Set text style for overall resume */
+#resume h1 {
+    margin-top: 30px;
+    margin-bottom: 0px;
+    text-transform: uppercase;
+    color: purple;
+    font-size: 22px;
+}
+#resume h2 {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    font-size: 20px;
+}
+#resume p, #resume ul {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+/*
+** ----------------------------------------------
+**              PROJECTS PAGE
+** ----------------------------------------------
+*/
+
+/* Set all projects items into a grid */
+#projects {
+    display: grid;
+}
+
+/* Set project grid style */
+.project {
+    margin-bottom:40px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 2px solid purple;
+    border-bottom: 2px solid purple;
+    border-radius: 36px;
+    background-color: #e4e4e4;
+}
+
+/* Display project's description text */
+.intro {
+    float:left;
+    width: 50%;
+    padding-left: 25px; 
+    text-align: justify;
+}
+.intro h1 {
+    margin-top: 0px;
+    color: purple;
+    font-size: 24px;
+}
+
+/* Display project's picture */
+.projectPicture {
+    display: flex;
+    justify-content: center;
+    width: 40%;
+    height: 100%;
+    padding-left: 30px;
+}
+.projectPicture img {
+    display: block;
+    margin: auto;
+    max-width:100%;
+    max-height:250px;
 }
