--- a/style.css
+++ b/style.css
@@ -156,6 +156,24 @@ body {
 ** ----------------------------------------------
 */
 
+/* Split in 2 sections */
+#resume {
+    display: flex;
+    margin-bottom: 10px;
+}
+#leftPart {
+    width: 60%;
+    margin-right: 10px;
+}
+#rightPart {
+    width: 40%;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 2px solid #320032;
+    border-radius: 16px;
+    background-color: #e4e4e4;
+}
+
 /* Set text style for overall resume */
 #resume h1 {
     margin-top: 30px;
@@ -182,6 +200,12 @@ details {
 /* MaKe links less appealing */
 .data a {
     color: black;
+}
+
+/* language section: set alignment */
+.align {
+    display: inline-block;
+    width: 70px;
 }
 
 
